--- a/SaintSender.Core.Tests/packages.config
+++ b/SaintSender.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MailSystem.Net-trunk" version="2.1.41" targetFramework="net48" />
   <package id="NUnit" version="3.10.1" targetFramework="net471" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net471" />
 </packages>
