--- a/SaintSender.Core/packages.config
+++ b/SaintSender.Core/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MailSystem.Net-trunk" version="2.1.41" targetFramework="net48" />
+  <package id="MailKit" version="2.7.0" targetFramework="net48" />
+  <package id="MimeKit" version="2.8.0" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net48" />
 </packages>
