--- a/SaintSender.Core.Tests/packages.config
+++ b/SaintSender.Core.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MailKit" version="2.7.0" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="1.2.6" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="3.1.3" targetFramework="net48" />
   <package id="MimeKit" version="2.8.0" targetFramework="net48" />
   <package id="NUnit" version="3.10.1" targetFramework="net471" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net471" />
