--- a/SaintSender.DesktopUI/packages.config
+++ b/SaintSender.DesktopUI/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MailKit" version="2.7.0" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="1.2.6" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="3.1.3" targetFramework="net48" />
   <package id="MimeKit" version="2.8.0" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net48" />
 </packages>
