--- a/SaintSender.Core.Tests/packages.config
+++ b/SaintSender.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Eramake.eCryptography" version="1.1.6" targetFramework="net48" />
   <package id="MailKit" version="2.7.0" targetFramework="net48" />
   <package id="MaterialDesignColors" version="1.2.6" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="3.1.3" targetFramework="net48" />
