--- a/SaintSender.Core/SaintSender.Core.csproj
+++ b/SaintSender.Core/SaintSender.Core.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Email.cs" />
+    <Compile Include="Interfaces\IWebConnectionService.cs" />
     <Compile Include="Services\GreetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IGreetService.cs" />
