--- a/SaintSender.Core/SaintSender.Core.csproj
+++ b/SaintSender.Core/SaintSender.Core.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Entities\Email.cs" />
     <Compile Include="Interfaces\IWebConnectionService.cs" />
+    <Compile Include="Services\ConnectionService.cs" />
     <Compile Include="Services\GreetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\IGreetService.cs" />
@@ -75,6 +76,17 @@
     <None Include="packages.config" />
     <None Include="ReadMe.md" />
     <None Include="Services\ReadMe.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="NETWORKLIST">
+      <Guid>{DCB00D01-570F-4A9B-8D69-199FDBA5723B}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets')" />
